# vio_ws

./: .gitignore  IMPLEMENTATION_REPORT.md  PROJECT_DOCUMENTATION.md  VI ES EKF debug guide.md  chat_critical_finding.md  drift_plan.md  ekf_note.md  es_ekf_handbook.md  es_ekf_plan.md  frames_2025-12-05_22.06.45.gv  imu_odometry.md  logs_and_notes.md  map_upgrade.md  prediction_step.md  project_proposal.md  project_readme.md  recommend.md  recommendation.md  recommendation2.md  sensor_preparation.md  task1.md  task2.md  task3.md
.devcontainer/: devcontainer.json
sanity_check/: metadata.yaml
src/vio_ekf/: CMakeLists.txt  package.xml  progress_checklist.md
src/vio_ekf/config/: diff_drive.yaml  ekf_params.yaml  turtlebot3_waffle_pi_bridge.yaml
src/vio_ekf/launch/: robot_state_publisher.launch.py  vio_ekf.launch.py
src/vio_ekf/models/turtlebot3_waffle_pi/: model.config  model.sdf
src/vio_ekf/models/vio_robot/: model.config  model.sdf
src/vio_ekf/rviz/: vio.rviz
src/vio_ekf/scripts/: generate_aruco_simulation.py
src/vio_ekf/src/: ekf_node.py  eval_node.py  pose_tf_broadcaster.cpp  vision_node.py
src/vio_ekf/urdf/: common_properties.urdf  turtlebot3_waffle_pi.urdf
src/vio_ekf/worlds/: landmarks.sdf
